[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"]}
serde_json = "1.0.145"
regex = "1.12.2"
bytes = "1.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"